@@ -28,6 +28,8 @@ version 2.0.0
 	* Log viewer aggregates logs from the same "Person," (contact, meta-
 	  contact, whatever) (Richard Laager)
 	* Message formatting persists between messages (Igor Belyi)
+	* Show an error message when temporarily unable to join an IRC channel
+	  or change your nick (Richard Laager)
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
